k8s/mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: movieticket-mongo
  namespace: movieticket
spec:
  serviceName: movieticket-mongo
  replicas: 1
  selector:
    matchLabels:
      app: movieticket-mongo
  template:
    metadata:
      labels:
        app: movieticket-mongo
    spec:
      containers:
        - name: mongo
          image: mongo:7.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: microk8s-hostpath
        resources:
          requests:
            storage: 5Gi
