k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movieticket-api
  labels:
    app: movieticket-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movieticket-api
  template:
    metadata:
      labels:
        app: movieticket-api
    spec:
      containers:
        - name: api
          image: keerthi1110/movieticket-api:latest
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: movieticket-api
spec:
  selector:
    app: movieticket-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
