k8s/mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movieticket-mongo-express
  labels:
    app: movieticket-mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movieticket-mongo-express
  template:
    metadata:
      labels:
        app: movieticket-mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: movieticket-mongo-express
spec:
  selector:
    app: movieticket-mongo-express
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 30081
  type: NodePort
