k8s/mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: movieticket-mongo
  namespace: movieticket
spec:
  clusterIP: None
  selector:
    app: movieticket-mongo
  ports:
    - port: 27017
